2015-03-10  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad_omp.c (save_scanner_omp): Don't send ca_pub, key_pub and
	key_priv elements, when matching values aren't provided.

	* src/html/classic/omp.xsl (edit_task, edit_target, edit_scanner)
	(edit_slave, edit_report_format): Handle modify command response.

2015-03-09  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/gsa_bar_chart.js (generate): Add percentage to
	bar tooltips.

2015-03-09  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/gsa_donut_chart.js (generate): Add tooltips to
	all parts of the donut slices and to the legend entries.

2015-03-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/classic/help.xsl (scanners.html): Improve help documentation.

2015-03-09  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/js/gsa_graphics_base.js (percentage_counts): Create
	copies of records so the original ones are not overwritten.

2015-03-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad_omp.c (verify_scanner_omp): Adjust to handle next page to
	return.

	* src/html/classic/gsad.xsl (html-gsa-logo): Add response indicator for
	verify scanner in scanner details page.

	* src/html/classic/omp.xsl (scanner [details]): Add extra scanner icons.
	(scanner-icons): Add next template argument, to specify next page.
	(scanner): Add argument in scanner-icons template call.

2015-03-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad.c (init_validator, exec_omp_get): Handle download_ca_pub and
	download_key_pub commands.

	* src/gsad_omp.c (download_ca_pub, download_key_pub): New functions.

	* src/gsad_omp.h: Add functions prototypes.

	* src/html/classic/omp.xsl (html-scanners-table): Increase number of
	actions icons.
	(scanner-icons): New template, for verify scanner, Download CA Public
	Key and Download Public Key buttons.
	(scanner): Adjust to call scanner-icons template.
