@@ -1,5 +1,10 @@
 2015-03-10  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
+	* src/gsad_omp.c (save_scanner_omp): Send command xml elements
+	unconditionally.
+
+2015-03-10  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
 	* src/gsad_omp.c (save_scanner_omp): Don't send ca_pub, key_pub and
 	key_priv elements, when matching values aren't provided.
 
